--- a/cog.yaml
+++ b/cog.yaml
@@ -1,11 +1,14 @@
 build:
+  gpu: true
+  cuda: "12.1"
   python_version: "3.10"
   python_packages:
-    - torch
-    - transformers
-    - accelerate
-    - sentencepiece
-    - safetensors
-    - huggingface_hub
+    - "torch==2.1.0"
+    - "transformers==4.37.2"
+    - "accelerate==0.25.0"
+    - "huggingface_hub==0.19.4"
+    - "sentencepiece==0.1.99"
+    - "protobuf==4.24.4"
+    - "einops==0.7.0"
 
-predict: "predictor.py:Predictor"
+predict: "predict.py:Predictor"
