--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,19 +3,27 @@ name: Deploy to Replicate
 on:
   push:
     branches: [main]
-  workflow_dispatch: # Memungkinkan menjalankan workflow secara manual
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Cog
-        uses: replicate/setup-cog@v1
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          token: ${{ secrets.REPLICATE_TOKEN }}
+          python-version: "3.10"
+
+      - name: Install Cog
+        run: |
+          curl -o /usr/local/bin/cog -L https://github.com/replicate/cog/releases/latest/download/cog_`uname -s`_`uname -m`
+          chmod +x /usr/local/bin/cog
+
+      - name: Login to Replicate
+        run: echo ${{ secrets.REPLICATE_TOKEN }} | cog login --token-stdin
 
       - name: Build and push model
         run: cog push
