--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,15 +12,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Cog direktly
+      - name: Install Cog
         run: |
           curl -o ./cog -L https://github.com/replicate/cog/releases/latest/download/cog_Linux_x86_64
           chmod +x ./cog
 
-      - name: Login to Replicate (alternatif)
+      - name: Login to Replicate with token
         env:
           REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_TOKEN }}
-        run: ./cog login
+        run: |
+          mkdir -p ~/.config/replicate
+          echo "{\"token\": \"$REPLICATE_API_TOKEN\"}" > ~/.config/replicate/config.json
+          echo "Replicate config created"
 
       - name: Build and push model
+        env:
+          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_TOKEN }}
         run: ./cog push
