--- a/cog.yaml
+++ b/cog.yaml
@@ -2,7 +2,7 @@ build:
   gpu: true
   cuda: "12.1"
   python_version: "3.12"
-  python_packages:
+  python_requirements:
     - "torch==2.1.0"
     - "transformers==4.37.2"
     - "accelerate==0.25.0"
