--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,30 @@
-name: Deploy to Replicate
+name: Push to Replicate
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
+    inputs:
+      model_name:
+        description: "fauzi3007/sahabat-ai-replicate"
+        required: true
 
 jobs:
-  deploy:
+  push_to_replicate:
+    name: Push to Replicate
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Free disk pace
+        uses: jlumbroso/free-disk-space@v1.3.1
+        with:
+          tool-cache: false
+          docker-images: false
+
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Cog
-        run: |
-          curl -o ./cog -L https://github.com/replicate/cog/releases/latest/download/cog_Linux_x86_64
-          chmod +x ./cog
+      - name: Setup Cog
+        uses: replicate/setup-cog@v2
+        with:
+          token: ${{ secrets.REPLICATE_CLI_AUTH_TOKEN }}
 
-      - name: Login to Replicate with token
-        env:
-          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_TOKEN }}
-        run: |
-          mkdir -p ~/.config/replicate
-          echo "{\"token\": \"$REPLICATE_API_TOKEN\"}" > ~/.config/replicate/config.json
-          echo "Replicate config created"
-
-      - name: Build and push model
-        env:
-          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_TOKEN }}
-        run: ./cog push r8.im/fauzi3007/sahabat-ai-replicate
+      - name: Push to Replicate
+        run: cog push r8.im/${{ inputs.model_name }}
