--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-torch==2.1.0
-transformers==4.37.2
-accelerate==0.25.0
-huggingface_hub==0.19.4
-sentencepiece==0.1.99
-protobuf==4.24.4
-einops==0.7.0
+torch==2.0.1
+huggingface_hub>=0.16.4
+numpy==1.24.3
+typing-extensions==4.7.1
+packaging==23.2
+sentencepiece
